name:                  pagerduty
version:               0.1.0
synopsis:              Pager Duty API Client
homepage:              http://github.com/brendanhay/pagerduty
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay, Kim Altintop
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>,
                       Kim Altintop <kim.altintop@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay, 2014 Kim Altintop
category:              Network, Monitoring
build-type:            Simple
cabal-version:         >= 1.10

description:
    Simple API client that wraps the PagerDuty REST APIs documented here:
    .
    * Integration API - <http://developer.pagerduty.com/documentation/integration/events>

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/pagerduty.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Network.PagerDuty
      , Network.PagerDuty.API
      , Network.PagerDuty.API.Integration
      , Network.PagerDuty.API.MaintenanceWindows
      , Network.PagerDuty.API.Services
      , Network.PagerDuty.IO
      , Network.PagerDuty.Internal
      , Network.PagerDuty.Types

    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        aeson                     ==0.7.*
      , base                      ==4.*
      , base64-bytestring
      , bytestring
      , data-default
      , http-client               ==0.3.*
      , http-client-tls           ==0.2.*
      , http-types
      , mtl
      , text
      , time
      , unordered-containers
