name:                  pagerduty
version:               0.1.0
synopsis:              Pager Duty API Client
homepage:              http://github.com/brendanhay/pagerduty
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay, Kim Altintop
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>, Kim Altintop <kim.altintop@gmail.com>
copyright:             Copyright (c) 2013-2014 Brendan Hay, 2014 Kim Altintop
category:              Network, Monitoring
build-type:            Simple
cabal-version:         >= 1.10

description:
    Simple API client that wraps the PagerDuty REST APIs documented here:
    .
    * Integration API - <http://developer.pagerduty.com/documentation/integration/events>

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/pagerduty.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
        Network.PagerDuty
      , Network.PagerDuty.API
      , Network.PagerDuty.Alerts
      -- , Network.PagerDuty.EscalationPolicies
      -- , Network.PagerDuty.Incidents
      -- , Network.PagerDuty.Integration
      -- , Network.PagerDuty.LogEntries
      -- , Network.PagerDuty.MaintenanceWindows
      -- , Network.PagerDuty.Reports
      -- , Network.PagerDuty.Schedules
      -- , Network.PagerDuty.Services
      -- , Network.PagerDuty.Users

    other-modules:
        Network.PagerDuty.TH
      , Network.PagerDuty.Types

    build-depends:
        aeson                >= 0.7   && < 1.0
      , base                 >= 4.5   && < 5.0
      , base64-bytestring    >= 1.0   && < 1.1
      , bytestring           >= 0.9   && < 1.0
      , conduit              >= 0.5.5
      , data-default         >= 0.5
      , http-client          >= 0.3.6 && < 0.5
      , http-client-lens     >= 0.1
      , http-client-tls
      , http-types           >= 0.8   && < 1.0
      , lens                 >= 4.0   && < 5.0
      , mtl                  >= 2.1   && < 3.0
      , text                 >= 1.1   && < 2.0
      , time                 >= 1.4   && < 2.0
      , transformers         >= 0.3   && < 0.5
      , unordered-containers >= 0.2.3

