name:                  pagerduty
version:               0.1.0
synopsis:              Pager Duty API Client
homepage:              http://github.com/brendanhay/pagerduty
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay, Kim Altintop
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>, Kim Altintop <kim.altintop@gmail.com>
copyright:             Copyright (c) 2013-2014 Brendan Hay, 2014 Kim Altintop
category:              Network, Monitoring
build-type:            Simple
cabal-version:         >= 1.10

description:
    Client library for the the PagerDuty REST APIs documented here:
    .
    * Integration API - <http://developer.pagerduty.com/documentation/integration>
    * REST API - <http://developer.pagerduty.com/documentation/rest>

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/pagerduty.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
        Control.Monad.Trans.PagerDuty
      -- , Network.PagerDuty.Integration
      -- , Network.PagerDuty.REST
      -- , Network.PagerDuty.REST.Alerts
      -- , Network.PagerDuty.REST.EscalationPolicies
--      , Network.PagerDuty.REST.EscalationPolicies.EscalationRules
      -- , Network.PagerDuty.REST.Incidents
      -- , Network.PagerDuty.REST.Incidents.Notes
      -- , Network.PagerDuty.REST.LogEntries
      -- , Network.PagerDuty.REST.MaintenanceWindows
      -- , Network.PagerDuty.REST.Reports
      -- , Network.PagerDuty.REST.Schedules
--      , Network.PagerDuty.REST.Schedules.Overrides
      -- , Network.PagerDuty.REST.Services
--      , Network.PagerDuty.REST.Services.EmailFilters
--      , Network.PagerDuty.REST.Users
      , Network.PagerDuty.REST.Users.ContactMethods
      , Network.PagerDuty.REST.Users.NotificationRules
      , Network.PagerDuty.REST.Webhooks

    other-modules:
        Network.PagerDuty.IO
      , Network.PagerDuty.Options
      , Network.PagerDuty.Query
      , Network.PagerDuty.TH
      , Network.PagerDuty.Types

    build-depends:
        aeson                 >  0.7   && <= 8.0
      , base                  >= 4.5   && <  5.0
--      , base64-bytestring     >= 1.0 && <  1.1
      , bifunctors

      , bytestring            >= 0.9   && <  1.0
      , bytestring-conversion >= 0.2.1
      , conduit               >= 0.5.5
      , data-default          >= 0.5
      , exceptions            >= 0.6
      , http-client           >= 0.3.6 && <  0.5
      , http-types            >= 0.8   && <  1.0
      , lens                  >= 4.0   && <  5.0
      , lens-aeson            >= 1.0
      , mmorph                >= 1.0
      , mtl                   >= 2.2.1 && <  3.0
      , old-locale
      , text                  >= 1.1   && <  2.0
      , time                  == 1.4.*
      , transformers          >= 0.4.1 && <  0.5
      , unordered-containers  >= 0.2.3

      , generics-sop
      , monad-control
      , template-haskell
      , transformers-base
